# qsharp

./: Cargo.toml  README.md
.github/workflows/: rust.yml
qsharp/: Cargo.toml
qsharp-ast/: Cargo.toml
qsharp-ast/examples/: bench.rs
qsharp-ast/src/: lib.rs
qsharp-ast/src/analysis/: expression.rs  normalize.rs
qsharp-ast/src/ast/: callable.rs  characteristics.rs  declaration_prefix.rs  expression.rs  ident.rs  kw.rs  namespace.rs  parameter.rs  program.rs  qualified_name.rs  qubit_initializer.rs  scope.rs  specialization.rs  statement.rs  symbol_binding.rs  type_declaration.rs  type_kind.rs  type_parameters.rs  utilities.rs
qsharp-ast/src/utilities/: adjoint.rs  controlled.rs  mapper.rs  mod.rs  transformer.rs  visitor.rs
qsharp-codegen/: Cargo.toml
qsharp-codegen/src/: codegen.rs  lib.rs  traits.rs
qsharp-codegen/src/codegen/: callable.rs  expression.rs  mod.rs  parameter.rs  symbol_binding.rs
qsharp-codegen/tests/: realistic.rs
qsharp-runtime/: Cargo.toml
qsharp-runtime/src/: lib.rs  types.rs
qsharp-runtime/src/Microsoft/Quantum/: Arrays.rs  Core.rs  Diagnostics.rs  Intrinsic.rs
qsharp/examples/: qir.rs
qsharp/src/: lib.rs
qsharp/tests/: arrays.rs  integer.rs  sim_trait.rs  test.rs
